--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+/* 
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -69,4 +69,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}   */
+
+
+body{
+  width: 100vw;
+  height: 100vh;;
 }
