--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,11 @@
 @import 'tailwindcss';
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Momo+Trust+Sans:wght@200..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Pixelify+Sans:wght@400..700&display=swap');
 body {
   display: flex;
   justify-content: center;
   background-color: rgb(24, 25, 39);
   color: white;
+   font-family: "Momo Trust Sans", sans-serif;
 }
 
 .main {
